--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -78,7 +78,7 @@ ul li a:hover {
     border-radius:20px ;
 }
 main{
-    background:#acebc7 ;
+    background:linear-gradient(to top,rgba(185,254,255,1) 0%, rgba(13,111,87,1) 100% );
     padding: 40px;;
     flex-direction: row;
 
@@ -106,6 +106,11 @@ h2{
     font-family: 'Manjari', sans-serif;
     display: inline-block;
 }
+
+.parrafo1:hover {
+    transform: scale(1.5,1) ;
+}
+
 .compras {
     float: left;
     padding: 20px;
@@ -121,7 +126,11 @@ h2{
         font-family: 'Manjari', sans-serif;
         display: inline-block; 
 }
-      
+   
+.parrafo2:hover {
+    transform: scale(1.5,1) ;
+}  
+
 footer{
     background: rgb(34,103,105);
     background: linear-gradient(90deg, rgba(34,103,105,1) 16%, rgba(8,204,195,1) 98%);
