--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -49,7 +49,7 @@ header{
 
 }
 
-nav{
+.nav{
     list-style-type: none;
     background: rgb(34,103,105);
     background: linear-gradient(90deg, rgba(34,103,105,1) 16%, rgba(8,204,195,1) 98%);
@@ -57,6 +57,9 @@ nav{
     width: 100%
     
    
+}
+.nav-link{
+    color:papayawhip ;
 }
 ul li{
     display: inline-block;
@@ -68,7 +71,6 @@ ul li a{
     font-family:'Questrial', sans-serif;
     font-size: 1.8rem;
     padding: 50px;
-    color: papayawhip;
     font-weight: bolder;
    
     
@@ -93,15 +95,15 @@ h2{
 
 .nosotros {
    float: right;
-   padding: 20px;
-   padding-right: 120px;
+   padding: 10px;
+   padding-right: 100px;
   
 }
 .parrafo1{
-    padding-left: 100px;
+    padding-left: 80px;
     padding: 20px;
     background:#49c39b ;
-    width: 60%;
+    width: 50%;
     font-size: 16px;
     font-family: 'Manjari', sans-serif;
     display: inline-block;
@@ -242,4 +244,7 @@ h2{
 h1{
     font-family:'Manjari',sans-serif;
     font-weight: bolder;
+}
+h5 {
+    color: aquamarine;
 }
